fix: improve contrast in light mode

--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -9,7 +9,7 @@
   --background: theme('colors.gray.200');
   --accent: theme('colors.gray.100');
   --primary: theme('colors.gray.800');
-  --muted: 107 115 128;
+  --muted: 75 85 99;
 }
 
 :root {
